<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="400dp"
    android:orientation="vertical"
    android:background="@color/white"
    android:elevation="15dp"
    xmlns:tools="http://schemas.android.com/tools">



    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"
        android:hint="@string/title">

        <EditText
            android:id="@+id/edt1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:fontFamily="@font/adamina"

            android:gravity="start"
            android:textSize="20sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="230dp"

        android:layout_margin="10dp"
        android:hint="@string/description">

        <EditText
            android:id="@+id/edt2"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:fontFamily="@font/adamina"

            android:gravity="start"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

   <!-- <EditText
        android:id="@+id/edt1"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="31sp"

        android:ems="10"
        android:gravity="top"
        android:hint="@string/title"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="42dp" />

    <EditText
        android:id="@+id/edt2"
        android:layout_width="309dp"
        android:layout_height="227dp"
        android:layout_gravity="center"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="textMultiLine" />-->

    <Button

        android:id="@+id/btn2"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/red"
        android:text="@string/save"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="168dp" />

</LinearLayout>