<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="11sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/creme"
            app:cardCornerRadius="15dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.014">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 android:background="@drawable/background"
                android:orientation="vertical"
                android:id="@+id/llRow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/txttitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:text="@string/title"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/almendra_sc"
                    android:importantForAccessibility="no"/>

                <TextView

                    android:importantForAccessibility="no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:text="@string/n_n"
                    android:layout_margin="5dp"
                    android:textSize="0.1sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtdescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:padding="1dp"
                    android:layout_margin="8dp"
                    android:text="@string/news"
                    android:textColor="@color/black"
                    android:textSize="18sp"

                    android:fontFamily="@font/adamina"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>